# Cairn

./: .gitignore  Makefile  README.md  cairn-brand-package.html  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: compat.py  config.py  errors.py  logging.py
backend/app/db/: session.py
backend/app/modules/benchmark/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/catalog/: __init__.py  models.py  repository.py  scaffold.py  service.py
backend/app/modules/chat/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/cognitive/: routes.py  schemas.py  service.py
backend/app/modules/content_updates/: __init__.py  routes.py  schemas.py  (+1 more)
backend/app/shared/: collections.py  worker.py
backend/tests/: conftest.py
backend/tests/contract/: test_openapi_contract.py
backend/tests/integration/: test_benchmark_api.py  test_chat_api.py  test_cognitive_api.py  test_content_updates_api.py  test_download_api.py  test_easy_setup_api.py  test_health_api.py  test_maps_api.py  test_ollama_api.py  test_rag_api.py  test_system_service_api.py  test_zim_api.py
backend/tests/unit/: test_benchmark_service.py  test_catalog_scaffold.py  test_chat_service.py  test_cognitive_service.py  test_content_updates_service.py  test_download_jobs.py  test_easy_setup_service.py  test_kiwix_hook.py  test_knowledge_base_service.py  test_manifest_catalog.py  test_map_service.py  test_ollama_service.py  test_orchestration_service.py  test_settings.py  test_system_service_manager.py  test_zim_service.py
(+189 files in other folders)
